<resources>
    <string name="app_name">JuegArte</string>
    <string name="splashScreen">JuegArte</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an account</string>
    <string name="error_email">Email is wrong or doesn\'t exist!</string>
    <string name="error_password">Wrong password!</string>
    <string name="sign_in_success">Welcome!</string>
    <string name="name">Name</string>
    <string name="sign_up_error">The account already exists!</string>
    <string name="account_created">Your account was created!</string>
    <string name="error_name">Name can\'t be empty</string>
    <string name="log_out">Log out</string>
    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Do you want to delete the item?</string>
    <string name="yes">Yes</string>
    <string name="clear_item">Clear Items</string>
    <string name="something_happened">Oops!, Something happened!</string>
    <string name="passwordConfirm">Password Confirm</string>
    <string name="username">Username</string>
    <string name="sign_in_error">Account is not registered or invalid data</string>
    <string name="profile">Profile</string>
    <string name="avatar">Avatar</string>
    <string name="update_img">Update image</string>
    <string name="points">Points</string>
    <string name="games">Games</string>
    <string name="game_mode_name">Game Mode Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>

    <string name="question_info">Question information</string>
    <string name="exit">Exit</string>
    <string name="game_exit_confirmation">Any proggress won\'t be saved, do you want to  leave?</string>
    <string name="loading">Loading</string>
    <string name="saving_data">Saving your data!</string>


    <string name="true_btn">True</string>
    <string name="false_btn">False</string>
    <string name="question_information">Question information</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="scratch_game">Scratch Game</string>
    <string name="start">Start</string>
    <string name="sign_in_to">Login to your account</string>
    <string name="or">or</string>
    <string name="country">Costa Rica</string>
    <string name="bar_profile_name">  </string>
    <string name="aka">Amateur</string>
    <string name="choose">Choose a Game</string>
    <string name="scratch_instructions">Scratch the area to discover the image hidden</string>
    <string name="raspaditas">Raspaditas</string>
    <string name="verdadero_o_falso">Verdadero o Falso</string>
    <string name="trivia_quiz">Trivia Quiz</string>
    <string name="success">Success!</string>
    <string name="saving_error">Error saving game data</string>
    <string name="help_and_assistance">Help and assistance</string>
    <string name="about_us">About Us</string>
    <string name="music">Music</string>
    <string name="achievements_no_loaded">Achievements not loaded</string>

</resources>