<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:JuegArte="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_settings"
    android:background="@drawable/background_purple">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        />

    <LinearLayout
        android:padding="15dp"
        android:id="@+id/ly_sound_effects"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_white">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="Sound Effects"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
    android:padding="15dp"
    android:id="@+id/btn_music"
    android:layout_below="@id/ly_sound_effects"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="40dp"
    android:background="@drawable/button_white">

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Music"
        android:textSize="26sp"
        android:fontFamily="@font/montserrat"
        />
</LinearLayout>

    <Button
        android:id="@+id/btn_help"
        android:layout_below="@id/btn_music"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        JuegArte:backgroundTint="@null"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_white"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:onClick="onClick"
        android:text="@string/help_and_assistance"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_about"
        android:layout_below="@id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        JuegArte:backgroundTint="@null"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_white"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:onClick="onClick"
        android:text="@string/about_us"
        android:textSize="20sp" />


</RelativeLayout>